--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,10 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
